@@ -17,6 +17,10 @@ Revision history for Perl extension App::Sqitch
      - Added explicit sorting for aggregated lists (such as the tags associated
        with a commit) to the MySQL, Exasol, Snowflake, and Postgres (8.4 and
        higher) engines.
+     - Fixed a bug where destination locking failed on the first deploy to
+       MySQL. Bug introduced along with destination locking in v1.2.0.
+       Thanks Tom Bloor the report and to Alberto Simões for the help
+       replicating the issue (#601).
 
 1.2.1  2021-12-05T19:59:45Z
      - Updated all the live engine tests, aside from Oracle, to test with
